[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-env"
version = "1.0.0"
description = "A customer support triage and resolution environment."
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]